tests/baselines/reference/es3-oldStyleOctalLiteralInEnums.errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
es3-oldStyleOctalLiteralInEnums.ts(2,7): error TS1121: Octal literals are not allowed. Use the syntax '-0o1'.
es3-oldStyleOctalLiteralInEnums.ts(3,7): error TS1121: Octal literals are not allowed. Use the syntax '0o2'.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== es3-oldStyleOctalLiteralInEnums.ts (2 errors) ====
    enum E {
      x = -01,
          ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '-0o1'.
      y = 02,
          ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o2'.
    }